Update product is with latest group IDs
Conflicts:
	modules/integration/tests-integration/tests-backend/pom.xml
	modules/p2-profile-gen/pom.xml

--- a/modules/samples/oauth2/playground2/pom.xml
+++ b/modules/samples/oauth2/playground2/pom.xml
@@ -54,7 +54,7 @@
             </exclusions>
         </dependency>
 		<dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
             <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
             <exclusions>
                 <exclusion>
