--- a/modules/authenticators/pom.xml
+++ b/modules/authenticators/pom.xml
@@ -42,9 +42,8 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity</groupId>
-                                    <artifactId>org.wso2.carbon.identity.application.authenticator.oidc
-                                    </artifactId>
+                                    <groupId>org.wso2.carbon.identity.outbound.auth.oidc</groupId>
+                                    <artifactId>org.wso2.carbon.identity.application.authenticator.oidc</artifactId>
                                     <version>${identity.outbound.auth.oidc.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
@@ -65,7 +64,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity</groupId>
+                                    <groupId>org.wso2.carbon.identity.outbound.auth.sts.passive</groupId>
                                     <artifactId>
                                         org.wso2.carbon.identity.application.authenticator.passive.sts
                                     </artifactId>
@@ -89,7 +88,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity</groupId>
+                                    <groupId>org.wso2.carbon.identity.outbound.auth.saml2</groupId>
                                     <artifactId>
                                         org.wso2.carbon.identity.application.authenticator.samlsso
                                     </artifactId>
@@ -108,8 +107,8 @@
         </plugins>
     </build>
     <properties>
-        <identity.outbound.auth.oidc.version>5.1.2</identity.outbound.auth.oidc.version>
-        <identity.outbound.auth.passive.sts.version>5.1.2</identity.outbound.auth.passive.sts.version>
-        <identity.outbound.auth.samlsso.version>5.1.3</identity.outbound.auth.samlsso.version>
+        <identity.outbound.auth.oidc.version>5.1.3-SNAPSHOT</identity.outbound.auth.oidc.version>
+        <identity.outbound.auth.passive.sts.version>5.2.0-SNAPSHOT</identity.outbound.auth.passive.sts.version>
+        <identity.outbound.auth.samlsso.version>5.1.4-SNAPSHOT</identity.outbound.auth.samlsso.version>
     </properties>
 </project>
