--- a/modules/samples/oauth/oauth10a-resource-owner-equivalent/pom.xml
+++ b/modules/samples/oauth/oauth10a-resource-owner-equivalent/pom.xml
@@ -88,11 +88,11 @@
 			<artifactId>gdata-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
 		</dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
             <artifactId>org.wso2.carbon.identity.oauth</artifactId>
         </dependency>
     </dependencies>
