--- a/modules/samples/xacml/kmarket-trading-sample/pom.xml
+++ b/modules/samples/xacml/kmarket-trading-sample/pom.xml
@@ -26,7 +26,7 @@
 	        <artifactId>httpclient</artifactId>
         </dependency>    
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity.user.ws</groupId>
 	        <artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
         </dependency> 
         <dependency>
