--- a/modules/samples/sso/sso-agent-sample/pom.xml
+++ b/modules/samples/sso/sso-agent-sample/pom.xml
@@ -36,7 +36,7 @@
             <artifactId>openws</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.agent.sso.java</groupId>
             <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
             <exclusions>
                 <exclusion>
