--- a/pom.xml
+++ b/pom.xml
@@ -544,7 +544,7 @@
                 <version>${axiom.wso2.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.core</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
@@ -571,12 +571,12 @@
                 <version>${carbon.kernel.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
                 <artifactId>org.wso2.carbon.identity.oauth</artifactId>
                 <version>${identity.inbound.auth.oauth.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
                 <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
                 <version>${identity.inbound.auth.oauth.version}</version>
             </dependency>
@@ -677,7 +677,7 @@
                 <version>${xml.apis.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.agent.sso.java</groupId>
                 <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
                 <version>${identity.agent.sso.version}</version>
             </dependency>
@@ -722,12 +722,12 @@
                 <version>${httpcore.wso2.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.user.ws</groupId>
                 <artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
                 <version>${identity.user.ws.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.user.ws</groupId>
                 <artifactId>org.wso2.carbon.um.ws.api</artifactId>
                 <version>${identity.user.ws.version}</version>
             </dependency>
@@ -737,7 +737,7 @@
                 <version>${carbon.kernel.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.entitlement.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
@@ -784,12 +784,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.user.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.inbound.auth.sts</groupId>
                 <artifactId>org.wso2.carbon.identity.sts.passive.stub</artifactId>
                 <version>${identity.inbound.auth.sts.version}</version>
             </dependency>
@@ -816,13 +816,13 @@
                 <version>${rampart.wso2.version.1}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.idp.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
@@ -840,19 +840,19 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.inbound.provisioning.scim</groupId>
                 <artifactId>org.wso2.carbon.identity.scim.common.stub</artifactId>
                 <version>${identity.inbound.provisioning.scim.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.user.store.configuration.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.user.store.count.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
@@ -864,42 +864,42 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
                 <artifactId>org.wso2.carbon.identity.sso.saml.stub</artifactId>
                 <version>${identity.inbound.auth.saml.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.claim.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.claim.metadata.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.inbound.auth.openid</groupId>
                 <artifactId>org.wso2.carbon.identity.provider.openid.stub</artifactId>
                 <version>${identity.inbound.auth.openid.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.association.account</groupId>
                 <artifactId>org.wso2.carbon.identity.user.account.association.stub</artifactId>
                 <version>${identity.user.account.association.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.governance</groupId>
                 <artifactId>org.wso2.carbon.identity.governance.stub</artifactId>
                 <version>${identity.governance.version}</version>
             </dependency>
@@ -1003,22 +1003,22 @@
                 <version>${commons-codec.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.user.profile.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.workflow.mgt.stub</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
 	    <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.workflow.impl.bps</groupId>
                 <artifactId>org.wso2.carbon.identity.workflow.impl.stub</artifactId>
                 <version>${identity.workflow.impl.bps.version}</version>
             </dependency>
@@ -1080,7 +1080,7 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.application.mgt</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
@@ -1090,12 +1090,12 @@
                 <version>${xercesImpl.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.workflow.mgt</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
@@ -1207,37 +1207,37 @@
 
         <!--Identity Repo Versions-->
         <identity.local.auth.basicauth.version>5.2.0-SNAPSHOT</identity.local.auth.basicauth.version>
-        <identity.carbon.auth.saml2.version>5.1.3</identity.carbon.auth.saml2.version>
-        <identity.inbound.auth.saml.version>5.1.1</identity.inbound.auth.saml.version>
+        <identity.carbon.auth.saml2.version>5.1.5-SNAPSHOT</identity.carbon.auth.saml2.version>
+        <identity.inbound.auth.saml.version>5.1.3-SNAPSHOT</identity.inbound.auth.saml.version>
         <identity.inbound.auth.oauth.version>5.2.0-SNAPSHOT</identity.inbound.auth.oauth.version>
-        <identity.inbound.auth.openid.version>5.1.1</identity.inbound.auth.openid.version>
-        <identity.agent.sso.version>5.1.1</identity.agent.sso.version>
-        <identity.inbound.auth.sts.version>5.1.1</identity.inbound.auth.sts.version>
-        <identity.local.auth.fido.version>5.1.1</identity.local.auth.fido.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.2</identity.outbound.auth.requestpath.basicauth.version>
-        <identity.carbon.auth.mutual.ssl.version>5.1.1</identity.carbon.auth.mutual.ssl.version>
+        <identity.inbound.auth.openid.version>5.2.0-SNAPSHOT</identity.inbound.auth.openid.version>
+        <identity.agent.sso.version>5.1.3-SNAPSHOT</identity.agent.sso.version>
+        <identity.inbound.auth.sts.version>5.1.2-SNAPSHOT</identity.inbound.auth.sts.version>
+        <identity.local.auth.fido.version>5.1.3-SNAPSHOT</identity.local.auth.fido.version>
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.3-SNAPSHOT</identity.outbound.auth.requestpath.basicauth.version>
+        <identity.carbon.auth.mutual.ssl.version>5.1.2-SNAPSHOT</identity.carbon.auth.mutual.ssl.version>
         <identity.notification.email.version>5.1.1</identity.notification.email.version>
         <identity.notification.json.version>5.1.1</identity.notification.json.version>
-        <identity.outbound.provisioning.google.version>5.1.1</identity.outbound.provisioning.google.version>
-        <identity.outbound.provisioning.salesforce.version>5.1.1</identity.outbound.provisioning.salesforce.version>
-        <identity.outbound.provisioning.spml.version>5.1.1</identity.outbound.provisioning.spml.version>
-        <identity.user.account.association.version>5.1.1</identity.user.account.association.version>
+        <identity.outbound.provisioning.google.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.google.version>
+        <identity.outbound.provisioning.salesforce.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.salesforce.version>
+        <identity.outbound.provisioning.spml.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.spml.version>
+        <identity.user.account.association.version>5.1.2-SNAPSHOT</identity.user.account.association.version>
         <identity.user.workflow.version>5.1.1</identity.user.workflow.version>
-        <identity.user.ws.version>5.1.1</identity.user.ws.version>
-        <identity.userstore.ldap.version>5.1.1</identity.userstore.ldap.version>
-        <identity.userstore.remote.version>5.1.1</identity.userstore.remote.version>
-        <identity.workflow.impl.bps.version>5.1.2</identity.workflow.impl.bps.version>
+        <identity.user.ws.version>5.1.3-SNAPSHOT</identity.user.ws.version>
+        <identity.userstore.ldap.version>5.1.2-SNAPSHOT</identity.userstore.ldap.version>
+        <identity.userstore.remote.version>5.1.2-SNAPSHOT</identity.userstore.remote.version>
+        <identity.workflow.impl.bps.version>5.1.3-SNAPSHOT</identity.workflow.impl.bps.version>
         <identity.local.auth.iwa.version>5.2.0-SNAPSHOT</identity.local.auth.iwa.version>
-        <identity.carbon.auth.iwa.version>5.1.1</identity.carbon.auth.iwa.version>
-        <identity.workflow.template.multisteps.version>5.1.1</identity.workflow.template.multisteps.version>
-        <identity.outbound.auth.requestpath.oauth.version>5.1.2</identity.outbound.auth.requestpath.oauth.version>
-        <identity.inbound.provisioning.scim.version>5.1.1</identity.inbound.provisioning.scim.version>
-        <identity.outbound.provisioning.scim.version>5.1.1</identity.outbound.provisioning.scim.version>
-        <identity.tool.samlsso.validator.version>5.1.1</identity.tool.samlsso.validator.version>
-        <identity.data.publisher.authentication.version>5.1.2</identity.data.publisher.authentication.version>
+        <identity.carbon.auth.iwa.version>5.1.3-SNAPSHOT</identity.carbon.auth.iwa.version>
+        <identity.workflow.template.multisteps.version>5.1.2-SNAPSHOT</identity.workflow.template.multisteps.version>
+        <identity.outbound.auth.requestpath.oauth.version>5.1.3-SNAPSHOT</identity.outbound.auth.requestpath.oauth.version>
+        <identity.inbound.provisioning.scim.version>5.1.3-SNAPSHOT</identity.inbound.provisioning.scim.version>
+        <identity.outbound.provisioning.scim.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.scim.version>
+        <identity.tool.samlsso.validator.version>5.1.2-SNAPSHOT</identity.tool.samlsso.validator.version>
+        <identity.data.publisher.authentication.version>5.1.3-SNAPSHOT</identity.data.publisher.authentication.version>
         <identity.data.publisher.oauth.version>1.0.0-SNAPSHOT</identity.data.publisher.oauth.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
-        <identity.application.auth.oidc.version>5.1.1</identity.application.auth.oidc.version>
+        <identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>
         <identity.governance.version>1.0.0-SNAPSHOT</identity.governance.version>
         <org.wso2.carbon.identity.auth.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.auth.version>
         <identity.event.handler.account.lock.version>1.0.0-SNAPSHOT</identity.event.handler.account.lock.version>
