Initiating C5 adaption for wso2 identity server

--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,10 @@
         <!--Features-->
 
         <!--Tests-->
-        <module>tests</module>
+        <!--<module>tests</module>-->
 
         <!--Tools-->
-        <module>tools</module>
+        <!--<module>tools</module>-->
 
         <!--Product-->
         <module>product</module>
