--- a/pom.xml
+++ b/pom.xml
@@ -1203,49 +1203,60 @@
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.5.0-SNAPSHOT</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.5.1</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
-        <identity.local.auth.basicauth.version>5.2.0-SNAPSHOT</identity.local.auth.basicauth.version>
-        <identity.carbon.auth.saml2.version>5.1.5-SNAPSHOT</identity.carbon.auth.saml2.version>
-        <identity.inbound.auth.saml.version>5.1.3-SNAPSHOT</identity.inbound.auth.saml.version>
-        <identity.inbound.auth.oauth.version>5.2.0-SNAPSHOT</identity.inbound.auth.oauth.version>
-        <identity.inbound.auth.openid.version>5.2.0-SNAPSHOT</identity.inbound.auth.openid.version>
-        <identity.agent.sso.version>5.1.3-SNAPSHOT</identity.agent.sso.version>
-        <identity.inbound.auth.sts.version>5.1.2-SNAPSHOT</identity.inbound.auth.sts.version>
-        <identity.local.auth.fido.version>5.1.3-SNAPSHOT</identity.local.auth.fido.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.3-SNAPSHOT</identity.outbound.auth.requestpath.basicauth.version>
-        <identity.carbon.auth.mutual.ssl.version>5.1.2-SNAPSHOT</identity.carbon.auth.mutual.ssl.version>
+        <identity.local.auth.basicauth.version>5.2.0</identity.local.auth.basicauth.version>
+        <identity.carbon.auth.saml2.version>5.1.5</identity.carbon.auth.saml2.version>
+        <identity.inbound.auth.saml.version>5.1.3</identity.inbound.auth.saml.version>
+        <identity.inbound.auth.oauth.version>5.2.0</identity.inbound.auth.oauth.version>
+        <identity.inbound.auth.openid.version>5.2.0</identity.inbound.auth.openid.version>
+        <identity.agent.sso.version>5.1.3</identity.agent.sso.version>
+        <identity.inbound.auth.sts.version>5.1.3</identity.inbound.auth.sts.version>
+        <identity.local.auth.fido.version>5.1.3</identity.local.auth.fido.version>
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.3</identity.outbound.auth.requestpath.basicauth.version>
+        <identity.carbon.auth.mutual.ssl.version>5.1.2</identity.carbon.auth.mutual.ssl.version>
         <identity.notification.email.version>5.1.1</identity.notification.email.version>
         <identity.notification.json.version>5.1.1</identity.notification.json.version>
-        <identity.outbound.provisioning.google.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.google.version>
-        <identity.outbound.provisioning.salesforce.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.salesforce.version>
-        <identity.outbound.provisioning.spml.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.spml.version>
-        <identity.user.account.association.version>5.1.2-SNAPSHOT</identity.user.account.association.version>
-        <identity.user.workflow.version>5.1.1</identity.user.workflow.version>
-        <identity.user.ws.version>5.1.3-SNAPSHOT</identity.user.ws.version>
-        <identity.userstore.ldap.version>5.1.2-SNAPSHOT</identity.userstore.ldap.version>
-        <identity.userstore.remote.version>5.1.2-SNAPSHOT</identity.userstore.remote.version>
-        <identity.workflow.impl.bps.version>5.1.3-SNAPSHOT</identity.workflow.impl.bps.version>
-        <identity.local.auth.iwa.version>5.2.0-SNAPSHOT</identity.local.auth.iwa.version>
-        <identity.carbon.auth.iwa.version>5.1.3-SNAPSHOT</identity.carbon.auth.iwa.version>
-        <identity.workflow.template.multisteps.version>5.1.2-SNAPSHOT</identity.workflow.template.multisteps.version>
-        <identity.outbound.auth.requestpath.oauth.version>5.1.3-SNAPSHOT</identity.outbound.auth.requestpath.oauth.version>
-        <identity.inbound.provisioning.scim.version>5.1.3-SNAPSHOT</identity.inbound.provisioning.scim.version>
-        <identity.outbound.provisioning.scim.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.scim.version>
-        <identity.tool.samlsso.validator.version>5.1.2-SNAPSHOT</identity.tool.samlsso.validator.version>
-        <identity.data.publisher.authentication.version>5.1.3-SNAPSHOT</identity.data.publisher.authentication.version>
-        <identity.data.publisher.oauth.version>1.0.0-SNAPSHOT</identity.data.publisher.oauth.version>
+        <identity.outbound.provisioning.google.version>5.1.2</identity.outbound.provisioning.google.version>
+        <identity.outbound.provisioning.salesforce.version>5.1.2</identity.outbound.provisioning.salesforce.version>
+        <identity.outbound.provisioning.spml.version>5.1.2</identity.outbound.provisioning.spml.version>
+        <identity.user.account.association.version>5.1.2</identity.user.account.association.version>
+        <identity.user.workflow.version>5.1.2</identity.user.workflow.version>
+        <identity.user.ws.version>5.1.3</identity.user.ws.version>
+        <identity.userstore.ldap.version>5.1.2</identity.userstore.ldap.version>
+        <identity.userstore.remote.version>5.1.2</identity.userstore.remote.version>
+        <identity.workflow.impl.bps.version>5.1.3</identity.workflow.impl.bps.version>
+        <identity.local.auth.iwa.version>5.2.0</identity.local.auth.iwa.version>
+        <identity.carbon.auth.iwa.version>5.1.4</identity.carbon.auth.iwa.version>
+        <identity.workflow.template.multisteps.version>5.1.2</identity.workflow.template.multisteps.version>
+        <identity.outbound.auth.requestpath.oauth.version>5.1.3</identity.outbound.auth.requestpath.oauth.version>
+        <identity.inbound.provisioning.scim.version>5.1.3</identity.inbound.provisioning.scim.version>
+        <identity.outbound.provisioning.scim.version>5.1.2</identity.outbound.provisioning.scim.version>
+        <identity.tool.samlsso.validator.version>5.1.2</identity.tool.samlsso.validator.version>
+        <identity.data.publisher.authentication.version>5.1.3</identity.data.publisher.authentication.version>
+        <identity.data.publisher.oauth.version>0.1.1</identity.data.publisher.oauth.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
-        <identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>
-        <identity.governance.version>1.0.0-SNAPSHOT</identity.governance.version>
-        <org.wso2.carbon.identity.auth.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.auth.version>
-        <identity.event.handler.account.lock.version>1.0.0-SNAPSHOT</identity.event.handler.account.lock.version>
-        <identity.event.handler.notification.version>1.0.0-SNAPSHOT</identity.event.handler.notification.version>
+        <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
+        <identity.governance.version>0.1.1</identity.governance.version>
+        <org.wso2.carbon.identity.auth.version>0.1.0</org.wso2.carbon.identity.auth.version>
+        <identity.event.handler.account.lock.version>1.0.0</identity.event.handler.account.lock.version>
+        <identity.event.handler.notification.version>0.1.0</identity.event.handler.notification.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
         <!--<identity.carbon.auth.signedjwt.version>5.1.1</identity.carbon.auth.signedjwt.version>-->
         <!--<identity.userstore.cassandra.version>5.1.1</identity.userstore.cassandra.version>-->
         <!--<identity.agent-entitlement-filter.version>5.1.1</identity.agent-entitlement-filter.version>-->
+
+        <!-- Authenticator Properties -->
+        <identity.outbound.auth.oidc.version>5.1.3</identity.outbound.auth.oidc.version>
+        <identity.outbound.auth.passive.sts.version>5.2.0</identity.outbound.auth.passive.sts.version>
+        <identity.outbound.auth.samlsso.version>5.1.4</identity.outbound.auth.samlsso.version>
+
+        <!-- Social Authenticator Properties -->
+        <social.authenticator.facebook.version>5.1.3</social.authenticator.facebook.version>
+        <social.authenticator.google.version>5.1.3</social.authenticator.google.version>
+        <social.authenticator.windowslive.version>5.1.3</social.authenticator.windowslive.version>
+        <social.authenticator.yahoo.version>5.1.3</social.authenticator.yahoo.version>
         <!--Identity Repo Versions End-->
 
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
